# japanese_anime_studio

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  ghibli.py  pyproject.toml
app/: __init__.py
app/movies/: __init__.py  api.py  commands.py  models.py  tasks.py
app/templates/: movies.html
tests/: __init__.py  test_ghibli.py
