[tool.poetry]
name = "ghibli"
version = "0.1.0"
description = "a small movies app"
authors = ["Saar Wasserman <saarwasserman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "3.5.3"
Flask = "1.1.2"
requests = "2.24.0"
flask-crontab = "0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
